# report-management-backend

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 520f0c344544_add_dataset_files_and_run_lifecycle_.py  54c64a6f369e_add_validation_engine_columns.py  63dba8f47fa1_create_initial_tables.py  a91cca073a79_create_initial_tables.py
app/api/v1/: dependencies.py  router.py
app/api/v1/endpoints/: dataset_files.py  datasets.py  validation_errors.py  validation_rules.py  validation_runs.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: __init__.py  dataset.py  dataset_file.py  validation_error.py  validation_rule.py  validation_run.py
app/schemas/: common.py  dataset.py  dataset_file.py  validation_error.py  validation_rule.py  validation_run.py
app/scripts/: seed_data.py
app/services/: exceptions.py  file_storage.py  rules.py  validation_engine.py
sample_data/: claim_data.csv  financial_accounts.csv  travel_information.csv
tests/: conftest.py  test_file_validation.py  test_rules.py
